examples/test/testpolicy3223.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3223
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key33: value16
      key18: value1
      key34: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value1
          key6: value18
          key0: value3
      podSelector:
        matchLabels:
          key13: value43
